# first-repo

./: CMakeLists.txt  Dockerfile  README.md
include/: SampleDetector.hpp  SampleDetectorImpl.hpp
model/: .gitignore
src/: SampleDetectorImpl.cpp  ji.cpp  ji.py
test/: Makefile
